<resources>
    <string name="app_name">VideoCallApp</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_app">Video Meeting App</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="email">Email</string>
    <string name="your_email_com">your@email.com</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_account_ready">We need a few details to get account ready</string>
    <string name="first_name">First Name</string>
    <string name="your_fisrt_name">Your Fisrt Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_last_name">your last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>